@@ -4,6 +4,7 @@ Changes with ngx-http-log-json 0.0.2                                26 Mar 2017
     *) parse recipe with pcre regex
     *) support literal boolean values
     *) support literal null values
+    *) support array values
     *) refactoring functions
     *) unit tests
     *) travis script integration
